# alvin-maratona-rs

./: README.md  config.env
MockDBs/: Mock_Abrigos.xlsx  Mock_CentroDeDoacoes.xlsx  Mock_Entidades.xlsx  Mock_LotacaoDosAbrigos.xlsx  Mock_Ocorrencias.xlsx
alvinbot/: app.py  pyproject.toml
alvinbot/alvinbot/: bot.py  config.env  config.py  default_commands.py  gemini_chat.py  llm_test.py  system_prompts.json  templater.py
alvinbot/alvinbot/templates/: commands.yaml  prompts.yaml
alvinbot/data/tables/: Mock_Abrigos.xlsx  Mock_Entidades.xlsx  Real_ListaDeAlertasEmRS.csv  entidades.json
alvinbot/services/alert/: alert_banners.py
alvinbot/services/bot/: bot.py  commands.py
alvinbot/services/common/: utils.py
alvinbot/services/common/utils/: templater.py
alvinbot/services/gemini_llm/: gemini_llm.py
alvinbot/services/gemini_vision/: gemini_vision.py
alvinbot/services/gemini_vision/tests/: test_gemini_vision.py
alvinbot/services/language/: llm.py  tools.py
alvinbot/services/language/tools/: alerts_search.py  donations_search.py  shelthers_search.py  tools.py
alvinbot/services/location/: location.py
alvinbot/templates/: commands.yaml  prompts.yaml
data/: Mock_RequisicaoDeDoacoes.xlsx  Mock_RequisicaoVoluntarios.xlsx
src/: bot.py  llm_api.py
